Refactored MyMath tests: 1. Removed 'new Double(...)' constructor, replaced with primitive double values. 2. Simplified test1 by using assertEquals instead of manual AssertionError. 3. Introduced @BeforeEach to have a before each  setup and avoid code duplication.